# artifact-builder

./: .gitignore  .prettierignore  Cargo.toml  README.md  com.pajlada.artifact-builder.plist  config.example.toml
.github/workflows/: build.yml
src/: config.rs  git.rs  main.rs  model.rs  span.rs
src/github/: client.rs  mod.rs  model.rs
src/web/: middleware.rs  mod.rs  ping.rs  push.rs  span_builder.rs
