[package]
name = "artifact-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.11.1"
actix-service = "2.0.3"
actix-web = "4.11.0"
anyhow = "1.0.99"
digest = "0.10.7"
figment = { version = "0.10.19", features = ["toml"] }
futures-util = "0.3.31"
git2 = "0.20.2"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
http-body = "1.0.1"
hyper = { version = "0.14.27", features = ["stream"] }
hyper-tls = "0.6.0"
reqwest = { version = "0.11.27", features = ["stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.20"
url = "2.5.6"
