[package]
name = "artifact-builder"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "artifact-builder"
identifier = "se.pajlada.artifact-builder"
version = "0.1.0"
copyright = "Copyright (c) Rasmus Karlsson 2023. All rights reserved."
category = "Developer Tool"
short_description = "Chatterino macOS artifact builder"
osx_frameworks = []
osx_url_schemes = []

[dependencies]
actix-http = "3.11.2"
actix-service = "2.0.3"
actix-web = "4.12.1"
anyhow = "1.0.100"
digest = "0.10.7"
figment = { version = "0.10.19", features = ["toml"] }
futures-util = "0.3.31"
git2 = "0.20.3"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
http-body = "1.0.1"
hyper = { version = "0.14.32", features = ["stream"] }
hyper-tls = "0.6.0"
reqwest = { version = "0.13.1", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-actix-web = "0.7.20"
tracing-subscriber = "0.3.22"
url = "2.5.8"
